@@ -40,6 +40,7 @@
                     </compileSourceRoots>
                     <compilerArgs>
                         <arg>--add-exports="jdk.jlink/jdk.tools.jlink.plugin=helidon.jlink"</arg>
+                        <arg>--add-exports="jdk.jlink/jdk.tools.jlink.internal=helidon.jlink"</arg>
                     </compilerArgs>
                     <fork>true</fork>
                 </configuration>
